debug CD workflow

--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -3,7 +3,7 @@ name: CD Pipeline
 # Only trigger, when the build workflow succeeded i.e. CI Pipeline
 on:
   workflow_run:
-    workflows: ["CD Pipeline"]
+    workflows: ["CI Pipeline"]
     types:
       - completed
 
